# covert-capability-horizons-sim

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
scenarios/: example.yaml  pilot_signal.yaml  pilot_signal_low_noise.yaml  study_search_pilot.yaml
scripts/: make_plots.py
src/cch_sim/: __init__.py  assurance.py  cli.py  config.py  design_search.py  gates.py  integrations.py  pipeline.py
src/cch_sim/core/: __init__.py  detection.py  humans.py  models.py  tasks.py  trend.py  utils.py
tests/: test_assurance.py  test_assurance_integration.py  test_assurance_table.py  test_bayes_trend.py  test_cli_simulate_outputs.py  test_design_fail_closed.py  test_design_search.py  test_design_search_helpers.py  test_detection_core.py  test_gates.py  test_humans.py  test_models_core.py  test_plots_minimal.py  test_stage1_participant_re.py  test_stage1_recovery.py  test_stage2_precision_vs_attempts.py  test_stage2_recovery.py  test_sweep_assurance.py  test_sweep_inrange_fail.py  test_tasks_core.py  test_trend_edgecases.py  test_trend_recovery_known.py
